<resources>
    <string name="app_name">Alua_4_splash_binding</string>
    <string name="Splash">Splash screen, let`s begin!</string>
    <string name="Nome">Nome</string>
    <string name="Senha">Senha</string>
    <string name="Bemvindo">Bemvindo</string>
    <string name="GoToSplash">Go to splash screen</string>
    <string name="Back">Go back</string>
    <string name="Forward">Go forward</string>
    <string name="posts">Posts</string>
    <string name="comments">Comments</string>
    <string name="albums">Albums</string>
    <string name="photos">Photos</string>
    <string name="todos">Todos</string>
    <string name="users">Users</string>
    <string name="Forward_Adapter">Go forward adapter</string>
    <string name="Forward_Presenter">Go forward presenter</string>
    <string name="title_activity__first_presenter">activity_FirstPresenter</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_first_presenter">FirstActivityPresenter</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
</resources>