<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstActivityPresenter">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/combo"
        android:text="TextView"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/combo"
        android:text="PRESENTER"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:onClick="abrirMainActivity"
        android:text="@string/GoToSplash"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="abrirLoginActivity"
        android:text="@string/Back"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@+id/button" />

    <Button
        android:id="@+id/posts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:onClick="onClick"
        android:tag="posts"
        android:text="@string/posts"
        app:layout_constraintStart_toStartOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <Button
        android:id="@+id/photos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:onClick="onClick"
        android:tag="photos"
        android:text="@string/photos"
        app:layout_constraintStart_toStartOf="@+id/posts"
        app:layout_constraintTop_toBottomOf="@+id/posts" />

    <Button
        android:id="@+id/todos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:tag="todos"
        android:text="@string/todos"
        app:layout_constraintEnd_toStartOf="@+id/users"
        app:layout_constraintStart_toEndOf="@+id/photos"
        app:layout_constraintTop_toTopOf="@+id/photos" />

    <Button
        android:id="@+id/users"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:tag="users"
        android:text="@string/users"
        app:layout_constraintEnd_toEndOf="@+id/albums"
        app:layout_constraintTop_toTopOf="@+id/todos" />

    <Button
        android:id="@+id/comments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:tag="comments"
        android:text="@string/comments"
        app:layout_constraintEnd_toStartOf="@+id/albums"
        app:layout_constraintStart_toEndOf="@+id/posts"
        app:layout_constraintTop_toTopOf="@+id/posts" />

    <Button
        android:id="@+id/albums"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:tag="albums"
        android:text="@string/albums"
        app:layout_constraintEnd_toEndOf="@+id/button2"
        app:layout_constraintTop_toTopOf="@+id/posts" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvInfoGeral"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/todos" />

</androidx.constraintlayout.widget.ConstraintLayout>